# dindbox

./: .gitignore  Dockerfile  Dockerfile.tiny  README.md  docker-compose.tiny.yaml  docker-compose.yaml  entrypoint.sh  openapi.json  pyproject.toml  requirements.txt  swagger.yaml
.github/workflows/: generate_swagger.yml
src/docker_mcp_server/: __init__.py  api_server.py  input_schemas.py  output_schemas.py  server.py  settings.py
web_app/: App.tsx  README.md  config.ts  constants.tsx  index.css  index.html  metadata.json  package-lock.json  package.json  tailwind.config.js  types.ts  vite.config.ts
web_app/components/: JsonViewer.tsx  Sidebar.tsx  ThemeSwitcher.tsx
web_app/hooks/: useWindowSize.ts
web_app/services/: docker-control-api.ts
web_app/views/: DashboardView.tsx  DockerControlView.tsx  DockerUiView.tsx
